# gluten

./: .gitignore  CMakeLists.txt  Makefile  README.md  pom.xml
.github/workflows/: bolt_backend_x86.yml  velox_docker.yml
backends-bolt/: README.md  pom.xml
backends-bolt/src-celeborn/main/scala/org/apache/spark/shuffle/: BoltCelebornColumnarBatchSerializer.scala  BoltCelebornColumnarShuffleWriter.scala
backends-bolt/src-delta/main/scala/org/apache/gluten/component/: BoltDeltaComponent.scala
backends-bolt/src-hudi/main/scala/org/apache/gluten/component/: BoltHudiComponent.scala
backends-bolt/src-iceberg/main/scala/org/apache/gluten/component/: BoltIcebergComponent.scala
backends-bolt/src-iceberg/main/scala/org/apache/gluten/execution/: AbstractIcebergWriteExec.scala
backends-bolt/src-iceberg/main/scala/org/apache/gluten/extension/: OffloadIcebergWrite.scala
backends-bolt/src-paimon/main/scala/org/apache/gluten/component/: BoltPaimonComponent.scala
backends-bolt/src-paimon/test/scala/org/apache/gluten/execution/: BoltPaimonSuite.scala
backends-bolt/src/main/java/org/apache/gluten/columnarbatch/: BoltColumnarBatches.java
backends-bolt/src/main/java/org/apache/gluten/metrics/: Metrics.java
backends-bolt/src/main/resources/org/apache/gluten/proto/: PaimonTableEnhancement.proto  shuffle_writer_info.proto
backends-bolt/src/main/scala/org/apache/gluten/config/: BoltConfig.scala
backends-bolt/src/main/scala/org/apache/gluten/datasource/: ArrowCSVFileFormat.scala  ArrowCSVOptionConverter.scala
backends-bolt/src/main/scala/org/apache/gluten/execution/: ArrowColumnarToBoltColumnarExec.scala  BoltColumnarToCarrierRowExec.scala  BoltResizeBatchesExec.scala  ColumnarPartialGenerateExec.scala  ColumnarPartialProjectExec.scala  ColumnarRangeExec.scala  GenerateExecTransformer.scala  HashAggregateExecTransformer.scala  HashJoinExecTransformer.scala
backends-bolt/src/main/scala/org/apache/gluten/expression/: BoltBloomFilterMightContain.scala  ExpressionRestrictions.scala
backends-bolt/src/main/scala/org/apache/gluten/extension/: AppendBatchResizeForShuffleInputAndOutput.scala  ArrowConvertorRule.scala  BloomFilterMightContainJointRewriteRule.scala  RemoveProjectExecBeforeGeneratorRule.scala
backends-bolt/src/main/scala/org/apache/gluten/metrics/: HashAggregateMetricsUpdater.scala  InputIteratorMetricsUpdater.scala  JoinMetricsUpdater.scala  MetricsUtil.scala
backends-bolt/src/main/scala/org/apache/gluten/spi/: SharedLibraryLoaderCentos7.scala  SharedLibraryLoaderCentos8.scala  SharedLibraryLoaderCentos9.scala  SharedLibraryLoaderDebian11.scala  SharedLibraryLoaderDebian12.scala  SharedLibraryLoaderMacOS.scala  SharedLibraryLoaderOpenEuler2403.scala  SharedLibraryLoaderUbuntu2004.scala  SharedLibraryLoaderUbuntu2204.scala
backends-bolt/src/main/scala/org/apache/gluten/utils/: BoltIntermediateData.scala  ParquetMetadataUtils.scala
backends-bolt/src/main/scala/org/apache/gluten/vectorized/: ColumnarBatchSerializerInstance.scala  SettableColumnarBatchSerializer.scala
backends-bolt/src/main/scala/org/apache/spark/shuffle/: ColumnarShuffleWriter.scala
backends-bolt/src/test/java/org/apache/gluten/fs/: ArrowFilesystemTest.java  TestNativeDataset.java
backends-bolt/src/test/java/org/apache/gluten/test/: MockBoltBackend.java
backends-bolt/src/test/scala/org/apache/gluten/config/: AllBoltConfiguration.scala
backends-bolt/src/test/scala/org/apache/gluten/execution/: ArrowCsvScanSuite.scala  BoltAggregateFunctionsSuite.scala  BoltExplodeExpressionSuite.scala  BoltLiteralSuite.scala  BoltMetricsSuite.scala  BoltOrcDataTypeValidationSuite.scala  BoltParquetDataTypeValidationSuite.scala  BoltRoughCostModelSuite.scala  BoltScanSuite.scala  BoltWindowExpressionSuite.scala  DynamicOffHeapSizingSuite.scala  FallbackSuite.scala  MiscOperatorSuite.scala
backends-common/: pom.xml
backends-velox/: pom.xml
backends-velox/src/test/scala/io/glutenproject/execution/: VeloxLiteralSuite.scala
cpp/: CMakeLists.txt  bolt.CMakeLists.cmake  conanfile.py  gluten.conan.graph.html
cpp/bolt/: CMakeLists.txt  README.md  symbols.map
cpp/bolt/benchmarks/: GenericBenchmark.cc
cpp/bolt/compute/: BoltBackend.cc  BoltPlanConverter.cc  BoltRuntime.cc  BoltRuntime.h  WholeStageResultIterator.cc  WholeStageResultIterator.h
cpp/bolt/compute/paimon/: PaimonPlanUtils.cc  PaimonPlanUtils.h
cpp/bolt/config/: BoltConfig.h
cpp/bolt/jni/: BoltJniWrapper.cc
cpp/bolt/memory/: BoltMemoryManager.cc
cpp/bolt/operators/serializer/: BoltColumnarBatchSerializer.cc  BoltColumnarBatchSerializer.h
cpp/bolt/shuffle/: BoltShuffleWriterWrapper.h
cpp/bolt/substrait/: README.md  SubstraitToBoltPlan.cc  SubstraitToBoltPlanValidator.cc
cpp/bolt/tests/: RuntimeTest.cc  SparkFunctionTest.cc
cpp/core/: CMakeLists.txt  bolt.CMakeLists.cmake
cpp/core/compute/: Runtime.cc  Runtime.h
cpp/core/config/: GlutenConfig.h
cpp/core/jni/: JniCommon.cc  JniCommon.h  JniWrapper.cc
cpp/core/nativeLoader/: CMakeLists.txt  JniNativeLibraryLoader.cc
cpp/velox/: CMakeLists.txt  velox-build-info.sh
cpp/velox/compute/: VeloxPlanConverter.cc  WholeStageResultIterator.cc  WholeStageResultIterator.h
cpp/velox/memory/: VeloxMemoryManager.cc
cpp/velox/substrait/: SubstraitParser.cc  SubstraitToVeloxExpr.cc  SubstraitToVeloxPlan.cc  SubstraitToVeloxPlanValidator.cc  TypeUtils.h
cpp/velox/version/: CMakeLists.txt  version.h  version.h.in
dev/: builddeps-boltbe.sh  builddeps-veloxbe.sh  gen-all-config-docs.sh  gen-bolt-cpp.sh  gluten-build-info.sh  package.sh  velox-build-info.properties
docs/: Bolt.md  Configuration.md  bolt-backend-scalar-function-support.md
ep/build-velox/src/: build_velox.sh  get_velox.sh  modify_velox.patch
gluten-substrait/src/main/resources/substrait/proto/substrait/: algebra.proto
gluten-ut/spark33/: pom.xml
gluten-ut/spark34/: pom.xml
gluten-ut/spark35/: pom.xml
gluten-ut/test/: pom.xml
package/: pom.xml
refactor/analysis/: extract_candidates.csv  extract_component_stats.json  plan_v2.md
refactor/impl/: build_and_lsp_report.md  changeset.md  next_steps.md
(+140 files in other folders)
